fix: overflow on devices (#471)

--- a/material.angular.io/src/styles/_markdown.scss
+++ b/material.angular.io/src/styles/_markdown.scss
@@ -49,6 +49,7 @@
   margin: 16px auto;
   overflow-x: auto;
   padding: 20px;
+  white-space: pre-wrap;
 
   .docs-markdown-code {
     padding: 0;
